package org.example.g_bridge;

public interface Brand {

    void open();

    void close();

    void call();

}
