package org.example.g_bridge;

public class Vivo implements Brand {

    public void open() {
        System.out.println("vivo open");
    }

    public void close() {
        System.out.println("vivo close");
    }

    public void call() {
        System.out.println("vivo call");
    }

}
