package org.example.g_bridge;

public class XiaoMi implements Brand {

    public void open() {
        System.out.println("XiaoMi open");
    }

    public void close() {
        System.out.println("XiaoMi close");
    }

    public void call() {
        System.out.println("XiaoMi call");
    }

}
